<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_topic_default"
        android:inputType="textAutoComplete"
        android:key="@string/settings_topic_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_topic_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_stories_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_number_of_stories_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_stories_label" />

</PreferenceScreen>